--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,25 @@
 @import "tailwindcss";
 
+
+
+
+@font-face {
+	font-family: aessFont;
+	src: url("../../public/font/BankGothic\ Md\ BT.ttf");
+}
+
+@font-face {
+	font-family: aessFontReg;
+	src: url("../../public/font/BankGothic Bold.ttf");
+}
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -19,8 +28,73 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  
+}
+
+a{
+  cursor: pointer;
+}
+
+body::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url("../../public/website.png");
+	background-size: contain;
+	background-position: center;
+	background-repeat: repeat;
+	opacity: 0.6; /* Adjust the opacity */
+	z-index: -1; /* Keeps it behind content */
+}
+
+.fontheader{
+	font-family: aessFont;
+}
+
+.fontBold{
+	font-family: aessFontReg;
+}
+
+
+.button_join {
+width:12rem;
+height: 60px;
+    background-image: url("../../public/button.svg");	
+  background-color: rgba(0, 0, 0, 0.541);
+  	background-size: cover;
+	background-position: center;
+	
+	background-repeat: repeat;
+	background-clip:padding-box;
+  border-radius: 5rem;
+  position: relative;
+  text-align: center;
+  padding: 5px;
+  box-sizing: border-box;
+  cursor: pointer;
+  align-items: center;
+  align-content: center;
+}
+
+.button_join::before {
+  border-radius: 5rem;
+  content: '';
+  background-image: radial-gradient(circle at 100%, #4690D4 0%, #6EBFF4 22% ,#A5EFFF 100%) ;
+  top: -1px;
+  left: -1px;
+  bottom: -1px;
+  right: -1px;
+  position: absolute;
+  z-index: -1;
 }
