--- a/src/components/header.css
+++ b/src/components/header.css
@@ -78,6 +78,9 @@
 	/* Push it behind content */
 	z-index: -1;
 }
+.astro{
+	z-index: -10;
+}
 
 
 .background {
@@ -86,7 +89,7 @@
 	z-index: 1; /* Ensure content appears above the pseudo-element */
 	color: white;
     	background-color: rgba(0, 0, 0);
-		height: 100vh;
+		height: 90vh;
 }
 
   @media (width < 64rem /* 768px */) {
@@ -186,7 +189,7 @@ filter: blur(0px);
 width:12rem;
 height: 60px;
     background-image: url("../../public/button.svg");	
-  background-color: rgba(0, 0, 0, 0.541);
+  background-color: rgb(0, 0, 0);
   	background-size: cover;
 	background-position: center;
 	
@@ -200,6 +203,7 @@ height: 60px;
   cursor: pointer;
   align-items: center;
   align-content: center;
+ 
 }
 
 .button_join::before {
@@ -211,7 +215,7 @@ height: 60px;
   bottom: -1px;
   right: -1px;
   position: absolute;
-  z-index: -1;
+ 
 }
 
 svg:hover {
