--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,3 +1,6 @@
-.footer{
-        background: linear-gradient(to top,#013568 ,#01356800 );
+.footer {
+  background: linear-gradient(to top, #013568, #01356800);
+  height: 100%;
+  position: relative;
+  bottom: 0px;
 }
