--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,24 @@
-@import "tailwindcss";
 
-
-
+@import 'tailwindcss';
 
 @font-face {
-	font-family: aessFont;
-	src: url("../../public/font/BankGothic\ Md\ BT.ttf");
+  font-family: aessFont;
+  src: url('../../public/font/BankGothic\ Md\ BT.ttf');
 }
 
 @font-face {
-	font-family: aessFontReg;
-	src: url("../../public/font/BankGothic Bold.ttf");
+  font-family: aessFontReg;
+  src: url('../../public/font/BankGothic Bold.ttf');
 }
-
+@font-face {
+  font-family: DMsans;
+  src: url('../../public/font/DMSans-Regular.ttf');
+}
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
-
-
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -35,48 +34,52 @@ html {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  
+  font-family: DMsans,sans-serif;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+}
+header{
+  overflow-x: hidden;
 }
 
-a{
+a {
   cursor: pointer;
 }
 
 body::before {
-	content: "";
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-image: url("../../public/website.png");
-	background-size: contain;
-	background-position: center;
-	background-repeat: repeat;
-	opacity: 0.6; /* Adjust the opacity */
-	z-index: -1; /* Keeps it behind content */
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../../public/website.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: repeat;
+  opacity: 0.6; /* Adjust the opacity */
+  z-index: -1; /* Keeps it behind content */
 }
 
-.fontheader{
-	font-family: aessFont;
+.fontheader {
+  font-family: aessFont;
 }
 
-.fontBold{
-	font-family: aessFontReg;
+.fontBold {
+  font-family: aessFontReg;
 }
-
 
 .content {
-width:12rem;
-height: 60px;
-    background-image: url("../../public/button.svg");	
+  width: 12rem;
+  height: 60px;
+  background-image: url('../../public/button.svg');
   background-color: rgba(0, 0, 0, 0.541);
-  	background-size: cover;
-	background-position: center;
-	
-	background-repeat: repeat;
-	background-clip:padding-box;
+  background-size: cover;
+  background-position: center;
+
+  background-repeat: repeat;
+  background-clip: padding-box;
   border-radius: 5rem;
   position: relative;
   text-align: center;
@@ -90,7 +93,7 @@ height: 60px;
 .content::before {
   border-radius: 5rem;
   content: '';
-  background-image: radial-gradient(circle at 100%, #4690D4 0%, #6EBFF4 22% ,#A5EFFF 100%) ;
+  background-image: radial-gradient(circle at 100%, #4690d4 0%, #6ebff4 22%, #a5efff 100%);
   top: -1px;
   left: -1px;
   bottom: -1px;
