--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-
 @import 'tailwindcss';
 
 @font-face {
@@ -34,12 +33,13 @@ html {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: DMsans,sans-serif;
+  font-family: DMsans, sans-serif;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  background-color: black;
 }
-header{
+header {
   overflow-x: hidden;
 }
 
