--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,8 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  background-color: black;
+  background-color: rgba(0, 0, 0);
+  z-index: 1;
 }
 header {
   overflow-x: hidden;
